<resources>
    <string name="app_name">ParkingApp</string>
    <string name="park">Park</string>
    <string name="unPark">UnPark</string>
    <string name="showStatus">Show Status</string>
    <string name="parking_system">Parking System</string>
    <string name="number_of_floors_in_the_system">Number of Floors in the System</string>
    <string name="create_system">Create System</string>
    <string name="number_of_parking_space_in_a_floor">Number of Parking Space in a Floor</string>
    <string name="number_of_floors">Number of Floors</string>
    <string name="vehicle_details">Vehicle details</string>
    <string name="vehicle_number">Vehicle Number (Eg : TN 67 DE 1433 )</string>
    <string name="vehicle_number_value">Vehicle Number : &#160; <![CDATA[<b>%s</b>]]></string>
    <string name="vehicle_name_with_model">Vehicle Name with model</string>
    <string name="park_vehicle">Park Vehicle</string>
    <string name="car">CAR</string>
    <string name="btnOkay">Okay</string>
    <string name="parking_space_number">Parking Space Number</string>
    <string name="unPark_vehicle">UnPark Vehicle</string>
    <string name="parking_ticket">Parking Ticket</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="vehicle_type_value">Vehicle Type : &#160; <![CDATA[<b>%s</b>]]></string>
    <string name="parking_space_name">Parking Space Name</string>
    <string name="parked_time">Parked Time</string>
    <string name="parked_time_value">Parked Time : &#160; <![CDATA[<b>%s</b>]]></string>
    <string name="pickup_time">Pickup Time</string>
    <string name="pickup_time_value">Pickup Time : &#160; <![CDATA[<b>%s</b>]]></string>
    <string name="view_parking_lot">View Parking Lot</string>
    <string name="proceed_for_payment">Proceed to Payment</string>
    <string name="ticket_number">Parking Ticket Number</string>
    <string name="ticket_number_value">Ticket Number : &#160; <![CDATA[<b>%s</b>]]></string>
    <string name="payment_details">Payment Details</string>
    <string name="first_hour_fee">First Hour Fee</string>
    <string name="rs">Rs</string>
    <string name="remaining_hour_fee">Remaining Hour Fee</string>
    <string name="total_fees">Total Fees</string>
    <string name="apply">Apply</string>
    <string name="promo_code">Coupon Code</string>
    <string name="duration">Duration :</string>
    <string name="vehicle_parked">Vehicle Parked !</string>
    <string name="pay_fees">Pay %s Rs</string>
    <string name="duration_value">Duration : %s</string>
    <string name="rupees_value">%s Rs</string>
    <string name="coupon_msg">"Coupon Applied Successfully \n 50% discount on First Hour Fee \n 10% discount on Remaining Hour Fee"</string>
    <string name="payment_received">Payment Received</string>
    <string name="amount_paid">Amount Paid :</string>
    <string name="vehicle_unparked_thank_you">Vehicle UnParked. Thank you</string>
    <string name="go_to_home">Go to Home</string>
    <string name="transactions">Transactions</string>
    <string name="parking">Parking</string>
    <string name="transaction_summary">Transaction Summary</string>
    <string name="ticket_id_tran">Ticket Num - %s</string>
    <string name="reserve_ticket_id_tran">Reservation Ticket Num - %s</string>
    <string name="vehicle_num_tran">Vehicle Num - %s</string>
    <string name="vehicle_type_tran">Vehicle Type - %s</string>
    <string name="pickup_time_tran">Pickup Time - %s</string>
    <string name="parked_time_tran">Parked Time - %s</string>
    <string name="duration_tran">Duration - %s</string>
    <string name="amount_paid_tran">Amount Paid - %s</string>
    <string name="coupon_applied">Coupon Applied</string>
    <string name="all">ALL</string>
    <string name="reservation">Reservation</string>
    <string name="reserve">Reserve</string>
    <string name="unreserve">UnReserve</string>
    <string name="pick_date_to_reserve">Pick date to reserve</string>
    <string name="parking_space_reservation_details">Parking Space Reservation Details</string>
    <string name="reserve_space">Reserve Space</string>
    <string name="reserve_date_format">%d/%d/%d </string>
    <string name="reservation_fees">Reservation Fees</string>
    <string name="pay_reservation_fees">Pay Reservation Fees</string>
    <string name="reservation_fee">Reservation Fee - </string>
    <string name="already_reserved">Already Reserved</string>
    <string name="not_reserved">Haven\'t Reserved</string>
    <string name="reservation_ticket_num">Reservation Ticket Number</string>
    <string name="reservation_details">Reservation Details</string>
    <string name="ticket_num">Ticket Num:</string>
    <string name="parked_time_">Parked Time:</string>
    <string name="picked_time">Picked Time:</string>
    <string name="reserved_date_tran">Reserved Date - %s</string>
    <string name="reserved">Reserved</string>
    <string name="from_reserved_space">From reserved space</string>
    <string name="parking_lot_status">Parking Lot Status</string>
    <string name="floor">Floor %s</string>
</resources>