<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <import type="android.text.Html"/>
        <variable
            name="parkingTicket"
            type="com.example.parkingapp.feature_fee_collection.domain.model.ParkingTicket" />
        <variable
            name="parkingLotViewModel"
            type="com.example.parkingapp.feature_parking.presentation.parking_lot.ParkingLotViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/parking_ticket"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline8" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <TextView
            android:id="@+id/vehicleNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:text="@{Html.fromHtml(String.format(@string/vehicle_number_value, parkingTicket.vehicleNum))}"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTicketNum"
            tools:text="@string/vehicle_number" />

        <TextView
            android:id="@+id/vehicleType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:text="@{Html.fromHtml(String.format(@string/vehicle_type_value, parkingTicket.vehicleType))}"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vehicleNum"
            tools:text="@string/vehicle_type" />

        <TextView
            android:id="@+id/tvTicketNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:text="@{Html.fromHtml(String.format(@string/ticket_number_value, parkingTicket.ticketId))}"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline9"
            tools:text="@string/ticket_number" />

        <TextView
            android:id="@+id/parkedTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:text="@{Html.fromHtml(String.format(@string/parked_time_value, parkingTicket.parkedTime))}"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vehicleType"
            tools:text="@string/parked_time" />

        <TextView
            android:id="@+id/pickupTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:text="@{Html.fromHtml(String.format(@string/pickup_time_value, parkingTicket.pickUpTime))}"
            android:textSize="18sp"
            android:visibility="@{parkingTicket.pickUpTime==null ? View.GONE : View.VISIBLE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/parkedTime"
            tools:text="@string/pickup_time" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <Button
            android:id="@+id/btnViewParkingLotOrPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{parkingTicket.pickUpTime==null ? @string/view_parking_lot : @string/proceed_for_payment}"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@+id/guideline12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvParkingMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/vehicle_parked"
            android:textColor="@color/green"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="@{parkingTicket.pickUpTime!=null ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toTopOf="@+id/tv_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/durationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:weightSum="100"
            android:visibility="@{parkingTicket.pickUpTime!=null ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toTopOf="@+id/btnViewParkingLotOrPayment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pickupTime">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="40"
                android:gravity="end"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textSize="18sp"
                android:text="@string/duration"/>

            <TextView
                android:id="@+id/durationValue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="60"
                android:textSize="18sp"
                android:gravity="start"
                android:textStyle="bold"
                android:textColor="@color/green"
                android:text="@{parkingTicket.duration}"/>

        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>